# labs2semester

./: .gitignore  main.cpp
lab1/NewRes2/: CMakeLists.txt  main.cpp
lab1/Res1/: CMakeLists.txt
lab3/: CMakeLists.txt  main.cpp
lab4/: CMakeLists.txt  main.cpp
lab6/: CMakeLists.txt  Circle.hpp  Figure.hpp  RightTriangle.hpp  main.cpp
